--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,9 +21,14 @@ body {
   );
 }
 
-canvas#backgroundCanvas {
+canvas#background {
   position: fixed;
   inset: 0;
   display: block;
   z-index: 0;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
 }
