--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,9 @@ html, body {
 }
 
 body {
-  overflow: hidden;
+  min-height: 100%;
+  margin: 0;
+
   background: linear-gradient(
     180deg,
     var(--color-sky-top) 0%,
@@ -21,6 +23,7 @@ body {
     var(--color-sky-mid) 70%,
     var(--color-sky-bottom) 100%
   );
+  background-attachment: fixed;
 }
 
 canvas#background {
