--- a/assets/css/home/home.css
+++ b/assets/css/home/home.css
@@ -4,6 +4,7 @@ div.titleContainer {
     align-items: center;
     flex-direction: column;
     height: 100vh;
+    text-align: center;
 }
 
 h1.title {
@@ -22,4 +23,14 @@ h2.subtitle {
     color: white;
     text-shadow: 1px 1px 2px #05060d95;
     margin: 0;
+}
+
+@media (max-width: 760px) {
+    h1.title {
+        font-size: 50px;
+    }
+
+    h2.subtitle {
+        font-size: 30px;
+    }
 }
